--- a/workspace/centralized/.classpath
+++ b/workspace/centralized/.classpath
@@ -2,12 +2,16 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/path_to_the_libraries/logist.jar"/>
-	<classpathentry kind="lib" path="C:/path_to_the_libraries/colt.jar"/>
-	<classpathentry kind="lib" path="C:/path_to_the_libraries/commons-math-1.1.jar"/>
-	<classpathentry kind="lib" path="C:/path_to_the_libraries/jdom.jar"/>
-	<classpathentry kind="lib" path="C:/path_to_the_libraries/jsolver.jar"/>
-	<classpathentry kind="lib" path="C:/path_to_the_libraries/plot.jar"/>
-	<classpathentry kind="lib" path="C:/path_to_the_libraries/repast.jar"/>
+	<classpathentry kind="lib" path="/Users/nachoaguadoc/Universidad/Intelligent Agents/workspace/logist/lib/repast.jar"/>
+	<classpathentry kind="lib" path="/Users/nachoaguadoc/Universidad/Intelligent Agents/workspace/logist/lib/plot.jar"/>
+	<classpathentry kind="lib" path="/Users/nachoaguadoc/Universidad/Intelligent Agents/workspace/logist/lib/jsolver.jar"/>
+	<classpathentry kind="lib" path="/Users/nachoaguadoc/Universidad/Intelligent Agents/workspace/logist/lib/jdom.jar"/>
+	<classpathentry kind="lib" path="/Users/nachoaguadoc/Universidad/Intelligent Agents/workspace/logist/lib/commons-math-1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/nachoaguadoc/Universidad/Intelligent Agents/workspace/logist/lib/colt.jar"/>
+	<classpathentry kind="lib" path="/Users/nachoaguadoc/Universidad/Intelligent Agents/workspace/logist/logist.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/Users/dmartr/Desktop/EPFL/Intelligent%20Agents/Workspace/doc/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
